Removing optional from getChildren